--- a/static/css/frame.scss
+++ b/static/css/frame.scss
@@ -8,19 +8,6 @@
 }
 
 .back-to-home {
-  @include respond-to("small") {
-    background-size: 24px auto;
-    padding-left: 35px;
-    border: 0;
-    margin: 0 2px;
-    span {
-      font-size: 20px;
-      &.small-text {
-        font-size: 14px;
-      }
-    }
-  }
-
   background-position: left center;
   background-image: url("../img/icon-screenshot.svg");
   background-repeat: no-repeat;
@@ -32,12 +19,24 @@
     display: block;
     text-align: left;
     margin: 0;
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 20px;
     &.small-text {
-      font-size: 17px;
-      padding-left: 0;
-      padding-right: 5px;
+      font-size: 18px;
+      padding: 0 5px 0 0;
+      font-weight: bold;
+    }
+  }
+
+  @include respond-to("small") {
+    background-size: 24px auto;
+    padding-left: 35px;
+    border: 0;
+    margin: 0 2px;
+    span {
+      font-size: 18px;
+      &.small-text {
+        font-size: 16px;
+      }
     }
   }
 
@@ -119,7 +118,8 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   margin: 0;
-  width: 100%;
+  width: auto;
+  max-width: 100%;
 }
 
 .shot-title {
@@ -414,7 +414,6 @@ body {
       @include flex-container(row, flex-start, center);
       margin-right: 10px;
       padding-top: 4px;
-      overflow: hidden;
     }
 
     @include respond-to("small") {
