--- a/static/css/partials/_footer.scss
+++ b/static/css/partials/_footer.scss
@@ -1,22 +1,26 @@
 .footer {
-  @media (max-width: 959px) {
-    @include flex-container(column, space-between, flex-start);
-    padding: $grid-unit;
+  
+  @include flex-container(column, space-between, flex-start);
+  padding: $grid-unit;
+  
+  @include respond-to("large") {
+    flex-direction: row;
+    padding: $grid-unit * 1.5;
   }
-
-  @include flex-container(row, space-between, center);
-  padding: $grid-unit * 1.5;
 
   .footer-links {
     display: flex;
     list-style: none;
     margin: 0 0;
-    padding: 0 0;
+    
+    @include flex-container(column, space-between, stretch);
+    padding: 16px 0 0 0;
 
-    @media (max-width: 959px) {
-      @include flex-container(column, space-between, stretch);
-      padding-top: 16px;
+    @include respond-to("large") {
+      flex-direction: row;
+      padding: 0 0;
     }
+    
 
     li {
       font-size: 14px;
