--- a/static/css/frame.scss
+++ b/static/css/frame.scss
@@ -49,7 +49,6 @@
 
   @include respond-to("large") {
     @include flex-container(row, flex-start, center);
-    overflow: hidden;
   }
 
   @include respond-to("small") {
@@ -60,6 +59,7 @@
 
   flex: 1;
   position: relative;
+  min-width: 0;
 
   .expire-info {
     display: block;
@@ -102,7 +102,6 @@
   color: $black;
   padding: 0 0 0 $grid-unit * 0.5;
   width: 100%;
-  max-width: calc(100vw - 160px);
 
   @include respond-to("large") {
     max-width: auto;
@@ -168,16 +167,26 @@
 .shot-title-input {
   @include respond-to("large") {
     max-width: 200px;
+    font-size: 32px;
+    line-height: 39px;
+    padding-bottom: 1px;
+    margin: 0 0 4px 0;
   }
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+  padding-bottom: 1px;
+  padding-left: 2px;
+
   border-radius: $border-radius;
   border: 1px solid $active-blue;
-  font-size: 24px;
-  font-weight: 300;
-  height: 32px;
-  margin: 0 0 4px -6px;
-  padding: 0 5px;
+  
+  margin: 0;
   overflow: auto;
   max-width: 100px;
+  position: relative;
+  top: -2px;
+  left: -3px;
 }
 
 .subtitle-link,
